--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.ts",
   "bin": {
-    "generate": "./index.ts"
+    "generate": "tsx index.ts"
   },
   "scripts": {
     "generate": "tsx index.ts"
